--- a/masjid-management/src/components/TransactionForm.css
+++ b/masjid-management/src/components/TransactionForm.css
@@ -202,6 +202,15 @@
     margin-bottom: 12px;
   }
 
+  .form-actions {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .form-actions :global(.ant-space-item) {
+    width: 100%;
+  }
+
   .form-button-submit,
   .form-button-cancel {
     width: 100%;
